# blank-project-cpp20-cmake-catch2-fmt

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  Main.cpp
test/: CMakeLists.txt  UnitTests.cpp
